k8s/namespace.yaml
{
  "apiVersion": "v1",
  "kind": "Namespace",
  "metadata": {
    "name": "__branch__",
    "labels": {
      "name": "__branch__"
    }
  }
}
