k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: swagger
  namespace: __branch__
spec:
  selector:
    matchLabels:
      app: swagger
  template:
    metadata:
      labels:
        app: swagger
    spec:
      containers:
      - name: swagger
        image: swaggerapi/swagger-editor
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 8080
