k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: swagger-service
  namespace: __branch__
spec:
  type: ClusterIP
  selector:
    app: swagger  
  ports:
  - port: 80
    targetPort: 8080
